style: conclui estilos do header e mobile nav

--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
     <link rel="stylesheet" href="./src/styles/styles.css">
   </head>
   <body>
+    
     <header class="c-header">
+     
       <button class="c-btn-mobile js-mobile"></button>
+      <div class="c-mobile__menu js-menu">
+        <a class="c-mobile__link" href="#">Minha Conta</a>
+        <a class="c-mobile__link" href="#">Minha Conta</a>
+      </div>
       <img
         class="c-header__image"
         src="./public/img/site-logo-corebiz-preto-cinza-grande.svg"
