style/refactor: estiliza neesletter e ajusta js

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="c-products__carousel"></div>
       </section>
       <section class="c-newsletter">
+        <h2 class="c-newsletter__title">Participe de nossas news com promoções e novidades!</h2>
         <form
           class="c-form"
           action="https://corebiz-test.herokuapp.com/api/v1/newsletter"
@@ -88,16 +89,16 @@
           enctype="multipart/form-data"
         >
           <input
-            class="c-input__name"
+            class="c-input js-name"
             type="text"
             placeholder="Digite seu nome"
           />
           <input
-            class="c-input__mail"
+            class="c-input js-mail"
             type="email"
             placeholder="Digite seu email"
           />
-          <button class="js-submit__button" type="submit">Eu quero!</button>
+          <button class="c-button js-submit__button" type="submit">Eu quero!</button>
         </form>
       </section>
     </main>
