style: estiliza footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           method="POST"
           enctype="multipart/form-data"
         >
-          <input
+        <input
             class="c-input js-name"
             type="text"
             placeholder="Digite seu nome"
@@ -112,8 +112,8 @@
         <p class="c-localization__item">+55 11 3090 1039</p>
       </section>
       <section class="c-footer__cta">
-        <a href="#" class="c-button">Entre em contato</a>
-        <a href="#" class="c-button">FALE COM O NOSSO CONSULTOR ONLINE </a>
+        <a href="#" class="c-button"><img src="./public/img/mail.svg" alt=""> ENTRE EM CONTATO</a>
+        <a href="#" class="c-button"> <img src="./public/img/headphone.svg" alt=""> FALE COM O NOSSO CONSULTOR ONLINE </a>
       </section>
       <section class="c-footer__partners">
         <div class="c-part__box">
