--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     <main class="l-main">
       <div class="c-banner__carousel">
         <div>
-          <img class="c-banner__image" src="/public/img/Banner.jpg" alt="" />
+          <img class="c-banner__image" src="./public/img/Banner.jpg" alt="" />
         </div>
         <div>
-          <img class="c-banner__image" src="/public/img/Banner.jpg" alt="" />
+          <img class="c-banner__image" src="./public/img/Banner.jpg" alt="" />
         </div>
         <div>
-          <img class="c-banner__image" src="/public/img/Banner.jpg" alt="" />
+          <img class="c-banner__image" src="./public/img/Banner.jpg" alt="" />
         </div>
       </div>
       <section class="c-products">
@@ -119,14 +119,14 @@
         <div class="c-part__box">
           <p class="c-part__text">Created by</p>
           <img
-            src="/public/img/site-logo-corebiz-preto-cinza.svg"
+            src="./public/img/site-logo-corebiz-preto-cinza.svg"
             alt=""
             class="c-part__image"
           />
         </div>
         <div class="c-part__box">
           <p class="c-part__text">Powered by</p>
-          <img src="/public/img/vtex.svg" alt="" class="c-part__image" />
+          <img src="./public/img/vtex.svg" alt="" class="c-part__image" />
         </div>
       </section>
     </footer>
