refactor/fix: ajusta banner

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         slidesToShow: 1,
         adaptiveHeight: true,
         arrows:false,
+        centerMode: false,
       });
       $(".c-products__carousel").slick({
         dots: false,
